@@ -1,6 +1,11 @@
 # ChangeLog for net-analyzer/nmap
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/ChangeLog,v 1.172 2008/05/12 15:55:12 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/ChangeLog,v 1.173 2008/06/09 19:31:17 spock Exp $
+
+*nmap-4.65 (09 Jun 2008)
+
+  09 Jun 2008; Michał Januszewski <spock@gentoo.org> +nmap-4.65.ebuild:
+  Version bump (bug #225491).
 
   12 May 2008; Markus Rothe <corsair@gentoo.org> nmap-4.60.ebuild:
   Stable on ppc64
